--- a/bacs200/index.html
+++ b/bacs200/index.html
@@ -4,15 +4,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Mark Seaman Home Page</title>
+    <title>Wyatt Jordan Home Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-    <h1>Mark Seaman Home Page</h1>
+    <h1>Wyatt Jordan Home Page</h1>
 
-    <img src="images/Mark-Seaman-200.jpg" alt="Mark Seaman">
 
     <h2>UNC BACS 200 Servers</h2>
 
@@ -29,30 +28,6 @@
         <a href="https://canvas.unco.edu">Canvas</a>
     </p>
 
-    <h2>Projects</h2>
-    <p>
-        Project Solutions from Mark Seaman
-    </p>
-    <ul>
-        <li>
-            Project #1 - <a href="https://unco-bacs.org">WordPress Blog</a>
-        </li>
-        <li>
-            Project #2 - <a href="https://unco-bacs.org/bacs200/inspire.html">Inspire Me</a>
-        </li>
-        <li>
-            Project #3 - <a href="https://unco-bacs.org/bacs200/amuse.html">Amuse Me</a>
-        </li>
-        <li>
-            Project #4 - <a href="https://unco-bacs.org/bacs200/project/index.html">Project Planner</a>
-        </li>
-        <li>
-            Project #5 - <a href="https://unco-bacs.org/bacs200/study_guide.html">Study Guide</a>
-        </li>
-    </ul>
-
-    <h2>Testing</h2>
-    <p>
         Links to help with page testing
     </p>
     <ul>
