--- a/bacs200/index.html
+++ b/bacs200/index.html
@@ -9,25 +9,7 @@
 </head>
 
 <body>
-
-    <h1>Wyatt Jordan Home Page</h1>
-
-
-    <h2>UNC BACS 200 Servers</h2>
-
-    <p>
-        My home page on my Bluehost Server
-        <a href="https://unco-bacs.org/bacs200/index.html">Home Page</a>
-    </p>
-    <p>
-        To visit the BACS 200 class website load the URL at
-        <a href="https://shrinking-world.com/unc/bacs200">Sensei Server Pages</a>
-    </p>
-    <p>
-        To visit the Canvas load the URL
-        <a href="https://canvas.unco.edu">Canvas</a>
-    </p>
-
+Wyatt Jordan is a student at University of Northern Colorado, seeking a marketing degree with a music minor, and a music technology certificate. Wyatt seeks a career working in the music industry, working on all sides from making music, to production, and marketing. Wyatt is an accomplished guitar player and musician having released one studio album and done orchestral arrangement and music for soundtracks for movies and video games.
         Links to help with page testing
     </p>
     <ul>
