--- a/bacs200/index.html
+++ b/bacs200/index.html
@@ -9,14 +9,11 @@
 </head>
 
 <body>
+ <h1>Wyatt Jordan Home Page</h1>
+<p/>
 Wyatt Jordan is a student at University of Northern Colorado, seeking a marketing degree with a music minor, and a music technology certificate. Wyatt seeks a career working in the music industry, working on all sides from making music, to production, and marketing. Wyatt is an accomplished guitar player and musician having released one studio album and done orchestral arrangement and music for soundtracks for movies and video games.
-        Links to help with page testing
-    </p>
-    <ul>
-        <li><a href="https://validator.w3.org">Validator Link</a></li>
-        <li><a href="https://validator.w3.org/nu/?doc=https://unco-bacs.org/bacs200/">Validate Home Page</a></li>
-    </ul>
-
+<p/>
+Project #2-<a href="02/index.html">Inspire Me</a>
 </body>
 
 </html>
