--- a/bacs200/02/index.html
+++ b/bacs200/02/index.html
@@ -21,12 +21,8 @@
             <li>willingness to self sacrifice</li>
         </ul>
         <p>
-            Over the last 100 years no man exemplifies these values for me more than
-            Martin Luther King.  He called people to be accountable for the racial
-            prejudices that we all carry.   He demonstrated that violence is not the
-            best way to create lasting change. And throughout his life he sacrificed
-            everything to make the world better.
+            ALthough he is not known for many of the warrior type characteristics that I look up to, J.R.R. Tolkien is a big influence on my life. As a creative person who loves fantasy, history, and mythology, Tolkien's work is the holy grail of creative work. Tolkien's unwavering attention to detail and commitment to his creative vision and the world he created is something to look up to for any creative person. His work laid the groundwork for all modern western fantasy storytelling. His most known works are the Lord of the Rings and The Hobbit, but he wrote numerous other books that help paint his fantasy world in even more breathtaking detail. He was a master of linguistics and and created full featured and vibrant languages for his world. Anyone who has seem the maps and supporting writing Tolkien did for his books can attest to his attention to detail. Tolkien's world has layers of depth beyond fairy tales due to his respect for history and cultures around the world. Many of his characters and languages are based in mythology, which is a core part of who we are as people. His use of history and mythology is respectful to the source material and adds a layer of realism and relatabilty many fantasy writers fail to reach. What I hope to do in life is modeled after Tolkien's commitment to his artistic vision and his respect for the world around him. 
         </p>
-        <p><a href="https://www.biography.com/activist/martin-luther-king-jr">Learn More ...</a></p>
+        <p><a href="https://https://www.tolkiensociety.org/author/biography/">More Information</a></p>
     </body>
 </html>
