--- a/bacs200/03/amuse.html
+++ b/bacs200/03/amuse.html
@@ -7,13 +7,17 @@
 
     </head>
     <body>
-
         <h1>Amusements</h1>
-        <img src="https://i.ytimg.com/vi/ZmgPc_GFOqw/maxresdefault.jpg" alt="dd1">
-        <h2>Amusement #1</h2>
-        <p>Description ... </p>
-        <p>Description ... </p>
-        <p><a href="https://www.youtube.com/watch?v=KKoQmsUZtO0&list=PLnOz4ii-wwzl1gH86mhqCHGOCqv4Vz0-T&index=2&t=0s">dining with dickey</a></p>
+        <img src="https://i.ytimg.com/vi/ZmgPc_GFOqw/maxresdefault.jpg" alt="dd1" width="500">
+        <h2>Dining with Dickey</h2>
+            <p><a href="https://www.youtube.com/watch?v=KKoQmsUZtO0&list=PLnOz4ii-wwzl1gH86mhqCHGOCqv4Vz0-T&index=2&t=0s">video link</a></p>
+        <p>Dining with Dickey is a series on the youtube channel the DickeyDines show. It features one of the hosts of the channel, Austin Dickey, making disgusting and unusual food dishes. Some of this dishes include, a triple decker sushi quesadilla, watermelon nachos, Chocolate meat burritos, and vodka pizza. 
+        WARNING: language and generally foul content</p>
+        <img src="https://preview.redd.it/d3h181g87md41.jpg?width=960&crop=smart&auto=webp&s=5d81eda4bbd1bee1f5f1e52b813fe4ad92a484ba" alt="simp" width="500">
+        <h2>Simpsons screenshots on reddit</h2>
+        <p><a href="https://www.reddit.com/r/TheSimpsons/">link to r/thesimpsons</a></p>
+        <p>I enjoy browsing reddit for a variety of things. Not only do I use it to keep up with the news and look at memes, but I also use it to learn from communities such as r/askhistorians. One of my favorite communities is r/thesimpsons. On this community people share fun screenshots, and discuss the show.</p>
+        
         
     </body>
 </html>
