--- a/bacs200/03/index.html
+++ b/bacs200/03/index.html
@@ -12,7 +12,7 @@
         Project #3 - <a href="amuse.html">Amuse Me</a>
     </p>
     <p>
-        <a href=".http://wyattjordanbacs.com/BACS-200/bacs200/index.html.">Home Page</a>
+        <a href=".http://wyattjordanbacs.com/BACS-200/bacs200/index.html.">Home</a>
     </p>
     
     <h2>Screenshots</h2>
