--- a/bacs200/03/index.html
+++ b/bacs200/03/index.html
@@ -12,13 +12,13 @@
         Project #3 - <a href="amuse.html">Amuse Me</a>
     </p>
     <p>
-        <a href=".http://wyattjordanbacs.com/BACS-200/bacs200/index.html.">Home</a>
+        <a href="http://wyattjordanbacs.com/BACS-200/bacs200/index.html">Home</a>
     </p>
     
     <h2>Screenshots</h2>
-    <p><a href="images/ftp-site-manager.png">images/ftp-site-manager.png</a> - Shows that you can login to the Bluehost FTP server.</p>
-    <p><a href="images/ftp-dirs.png">images/ftp-dirs.png</a> - Shows that your default directories are properly set.</p>
-    <p><a href="images/ftp-files.png">images/ftp-files.png</a> - Shows that your files are properly loading locally and remotely on the Bluehost FTP server.</p>
+    <p><a href="images/ftp-site-manager.PNG">images/ftp-site-manager.png</a> - Shows that you can login to the Bluehost FTP server.</p>
+    <p><a href="images/ftp-dirs.PNG">images/ftp-dirs.png</a> - Shows that your default directories are properly set.</p>
+    <p><a href="images/ftp-files.PNG">images/ftp-files.png</a> - Shows that your files are properly loading locally and remotely on the Bluehost FTP server.</p>
 </body>
 
 </html>
