--- a/bacs200/03/amuse.html
+++ b/bacs200/03/amuse.html
@@ -19,7 +19,7 @@
         <p>I enjoy browsing reddit for a variety of things. Not only do I use it to keep up with the news and look at memes, but I also use it to learn from communities such as r/askhistorians. One of my favorite communities is r/thesimpsons. On this community people share fun screenshots, and discuss the show.</p>
         <img src="https://comb.io/oQFo3m.gif" alt="whalers">
         <h2>Whalers on the moon bit from futurama</h2>
-        <p><a href="https://comb.io/Gmr4aM.gif">link to source</a></p>
+        <p><a href="https://comb.io/oQFo3m.gif>link to source</a></p>
         <p> One of my favorite bits from the TV show. The cast travels to an amusement park on the moon, where they go on a lame tourist ride that hypothesizes what life on the moon may have been like. This is a social commentary on how we view history, because there are many things we believe that could be wrong.</p>
         
     </body>
