--- a/bacs200/03/amuse.html
+++ b/bacs200/03/amuse.html
@@ -10,7 +10,7 @@
         <h1>Amusements</h1>
         <img src="https://i.ytimg.com/vi/ZmgPc_GFOqw/maxresdefault.jpg" alt="dd1" width="500">
         <h2>Dining with Dickey</h2>
-            <p><a href="https://www.youtube.com/watch?v=KKoQmsUZtO0&list=PLnOz4ii-wwzl1gH86mhqCHGOCqv4Vz0-T&index=2&t=0s">video link</a></p>
+            <p><a href="https://www.youtube.com/watch?v=KKoQmsUZtO0&list=PLnOz4ii-wwzl1gH86mhqCHGOCqv4Vz0-T&index=2&t=0s">Link to video</a></p>
         <p>Dining with Dickey is a series on the youtube channel the DickeyDines show. It features one of the hosts of the channel, Austin Dickey, making disgusting and unusual food dishes. Some of this dishes include, a triple decker sushi quesadilla, watermelon nachos, Chocolate meat burritos, and vodka pizza. 
         WARNING: language and generally foul content</p>
         <img src="https://preview.redd.it/d3h181g87md41.jpg?width=960&crop=smart&auto=webp&s=5d81eda4bbd1bee1f5f1e52b813fe4ad92a484ba" alt="simp" width="500">
@@ -19,8 +19,7 @@
         <p>I enjoy browsing reddit for a variety of things. Not only do I use it to keep up with the news and look at memes, but I also use it to learn from communities such as r/askhistorians. One of my favorite communities is r/thesimpsons. On this community people share fun screenshots, and discuss the show.</p>
         <img src="https://comb.io/oQFo3m.gif" alt="whalers">
         <h2>Whalers on the moon bit from futurama</h2>
-        <p><a href="https://comb.io/oQFo3m.gif>link to source</a></p>
-        <p> One of my favorite bits from the TV show. The cast travels to an amusement park on the moon, where they go on a lame tourist ride that hypothesizes what life on the moon may have been like. This is a social commentary on how we view history, because there are many things we believe that could be wrong.</p>
-        
+        <p><a href="https://comb.io/oQFo3m.gif">link to source</a></p>
+        <p>This is one of my favorite bits from the show. The cast travels to an amusement park on the moon and goes on a dopey ride that shows what historians in the future think life on the moon may have been like. This is a funny social commentary on how we percieve history as absolute facts, but oftentimes we may be wrong.</p>
     </body>
 </html>
