--- a/bacs200/03/amuse.html
+++ b/bacs200/03/amuse.html
@@ -6,8 +6,12 @@
         <title>Page Title</title>
 
     </head>
+    
     <body>
         <h1>Amusements</h1>
+         <p>
+        <a href="http://wyattjordanbacs.com/bacs200/index.html">Home</a>
+    </p>
         <img src="https://i.ytimg.com/vi/ZmgPc_GFOqw/maxresdefault.jpg" alt="dd1" width="500">
         <h2>Dining with Dickey</h2>
             <p><a href="https://www.youtube.com/watch?v=KKoQmsUZtO0&list=PLnOz4ii-wwzl1gH86mhqCHGOCqv4Vz0-T&index=2&t=0s">Link to video</a></p>
