--- a/bacs200/03/index.html
+++ b/bacs200/03/index.html
@@ -8,11 +8,11 @@
 
 <body>
     <h1>BACS 200 - Week #3 - Jan 27</h1>
-    <p>
-        Project #3 - <a href="amuse.html">Amuse Me</a>
+     <p>
+        <a href="http://wyattjordanbacs.com/bacs200/index.html">Home</a>
     </p>
     <p>
-        <a href="http://wyattjordanbacs.com/BACS-200/bacs200/index.html">Home</a>
+        Project #3 - <a href="amuse.html">Amuse Me</a>
     </p>
     
     <h2>Screenshots</h2>
