--- a/bacs200/05/index.html
+++ b/bacs200/05/index.html
@@ -1,1 +1,38 @@
 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <title>BACS 200 - Week #5</title>
+</head>
+
+<body>
+    <h1>BACS 200 - Week 5</h1>
+
+        <li>
+            <a href="..">Home Page</a>
+        </li>
+        <li>
+            <a href="profile.html">Profile Page</a>
+        </li>
+        <li>
+            <a href="edutain.html">Educate & Entertain</a>
+        </li>
+    </ul>
+
+    <hr>
+
+    <h2>Screenshots</h2>
+    <p>
+        <a href="images/url-game.png" target="screenshot">
+            <img src="images/url-game.png" width="200" alt="URL Game Win">
+        </a>
+        - Shows that your default directories are properly set.
+    </p>
+
+
+</body>
+
+</html>
+
