--- a/bacs200/05/index.html
+++ b/bacs200/05/index.html
@@ -11,13 +11,13 @@
     <h1>BACS 200 - Week 5</h1>
 
         <li>
-            <a href="..">Home Page</a>
+            <a href="../index.html">Home Page</a>
         </li>
         <li>
-            <a href="profile.html">Profile Page</a>
+            <a href="selfie.html">Profile Page</a>
         </li>
         <li>
-            <a href="edutain.html">Educate & Entertain</a>
+            <a href="edutain.html">Edutain</a>
         </li>
     </ul>
 
@@ -25,10 +25,10 @@
 
     <h2>Screenshots</h2>
     <p>
-        <a href="images/url-game.png" target="screenshot">
-            <img src="images/url-game.png" width="200" alt="URL Game Win">
+        <a href="../skills/urlgame.PNG">
+            <img src="../skills/urlgame.PNG" width="200" alt="URL Game Win">
         </a>
-        - Shows that your default directories are properly set.
+        URL game win
     </p>
 
 
