--- a/bacs200/05/selfie.html
+++ b/bacs200/05/selfie.html
@@ -1,1 +1,33 @@
-ye ye boi
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <title>Profile page</title>
+</head>
+
+<body>
+    <h1>Profile page</h1>
+            <a href="index.html">Week #5 Page</a>
+    <p>
+    
+            <a href="edutain.html">Educate & Entertain</a>
+    </p>
+    
+    <h2>Artwork</h2>
+    <p>
+        <a href="images/me-orginal.png">
+            <img src="images/me-orginal.png" width="300" alt="before">
+        </a>
+        - Before
+    </p>
+    <p>
+        <a href="images/me.png">
+            <img src="images/me.png" width="300" alt="after">
+        </a>
+        - After
+    </p>
+
+</body>
+
+</html>
