--- a/bacs200/05/edutain.html
+++ b/bacs200/05/edutain.html
@@ -1,1 +1,107 @@
-ye ye boi
+
+<!doctype html>
+<html lang="en">
+
+<head>
+    <title>Edutain</title>
+</head>
+
+<body>
+    <h1>Superheroes</h1>
+    <a href="index.html">Week #5 Page</a>
+    <table>
+        <th>Title and Speaker</th>
+        <th>Video</th>
+        <th>Summary</th>
+        <tr>
+            <td>
+                T'Challa
+            </td>
+            <td>
+                Black Panther
+            </td>
+            <td>
+                <img src="images/black-panther.jpg" alt="Black Panther" width="200">
+            </td>
+        </tr>
+        <tr>
+            <td>
+                Natasha Romanoff
+            </td>
+            <td>
+                Black Widow
+            </td>
+            <td>
+                <img src="images/black-widow.jpg" alt="Black Widow" width="200">
+            </td>
+        </tr>
+        <tr>
+            <td>
+                Tony Stark
+            </td>
+            <td>
+                Iron Man
+            </td>
+            <td>
+                <img src="images/iron-man.jpg" alt="Iron Man" width="200">
+            </td>
+        </tr>
+        <tr>
+            <td>
+                Steve Rogers
+            </td>
+            <td>
+                Captain America
+            </td>
+            <td>
+                <img src="images/captain-america.jpg" alt="Captain America" width="200">
+            </td>
+        </tr>
+        <tr>
+            <td>
+                T'Challa
+            </td>
+            <td>
+                Black Panther
+            </td>
+            <td>
+                <img src="images/black-panther.jpg" alt="Black Panther" width="200">
+            </td>
+        </tr>
+        <tr>
+            <td>
+                Natasha Romanoff
+            </td>
+            <td>
+                Black Widow
+            </td>
+            <td>
+                <img src="images/black-widow.jpg" alt="Black Widow" width="200">
+            </td>
+        </tr>
+        <tr>
+            <td>
+                Tony Stark
+            </td>
+            <td>
+                Iron Man
+            </td>
+            <td>
+                <img src="images/iron-man.jpg" alt="Iron Man" width="200">
+            </td>
+        </tr>
+        <tr>
+            <td>
+                Steve Rogers
+            </td>
+            <td>
+                Captain America
+            </td>
+            <td>
+                <img src="images/captain-america.jpg" alt="Captain America" width="200">
+            </td>
+        </tr>
+    </table>
+</body>
+
+</html>
