--- a/bacs200/05/index.html
+++ b/bacs200/05/index.html
@@ -11,17 +11,15 @@
     <h1>BACS 200 - Week 5</h1>
 
         <li>
-            <a href="../index.html">Home Page</a>
+            <a href="../index.html">Home</a>
         </li>
         <li>
             <a href="selfie.html">Profile Page</a>
         </li>
         <li>
             <a href="edutain.html">Edutain</a>
-        </li>
-    </ul>
+    </li>
 
-    <hr>
 
     <h2>Screenshots</h2>
     <p>
