--- a/bacs200/05/edutain.html
+++ b/bacs200/05/edutain.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <h1>Superheroes</h1>
+    <h1>Edutain</h1>
     <a href="index.html">Week #5 Page</a>
     <table>
         <th>Title and Speaker</th>
@@ -15,46 +15,35 @@
         <th>Summary</th>
         <tr>
             <td>
-                T'Challa
+               Dr. Michael Bishop, GWAR and Regional Identity
             </td>
             <td>
-                Black Panther
+               <iframe width="560" height="315" src="https://www.youtube.com/embed/RbQdUJILSPI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </td>
             <td>
-                <img src="images/black-panther.jpg" alt="Black Panther" width="200">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Natasha Romanoff
-            </td>
-            <td>
-                Black Widow
-            </td>
-            <td>
-                <img src="images/black-widow.jpg" alt="Black Widow" width="200">
+                One of the members of the shock rock band GWAR discusses the band and art in the punk scene in Richmond.
             </td>
         </tr>
-        <tr>
+       <tr>
             <td>
-                Tony Stark
+                Allan Savory, How to green the world's deserts and reverse climate change
             </td>
             <td>
-                Iron Man
+               <iframe width="560" height="315" src="https://www.youtube.com/embed/vpTHi7O66pI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </td>
             <td>
-                <img src="images/iron-man.jpg" alt="Iron Man" width="200">
+                One of the living legends of convservation and the creator of holistic management, Allan Savory, talks about climate change and his radical ideas for agriculture and conservation.
             </td>
         </tr>
-        <tr>
+       <tr>
             <td>
-                Steve Rogers
+                Bob Ballard, On exploring the oceans
             </td>
             <td>
-                Captain America
+               <iframe width="560" height="315" src="https://www.youtube.com/embed/bOYIKJho18I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </td>
             <td>
-                <img src="images/captain-america.jpg" alt="Captain America" width="200">
+               The ocean explorer and scientist who rediscovered the Titanic and numerous other shipwrecks, Bob Ballard, talks about exploring the ocean.
             </td>
         </tr>
         <tr>
@@ -62,43 +51,38 @@
                 T'Challa
             </td>
             <td>
-                Black Panther
+               <iframe width="420" height="315"
+                src="https://www.youtube.com/embed/tgbNymZ7vqY">
+                </iframe>
             </td>
             <td>
-                <img src="images/black-panther.jpg" alt="Black Panther" width="200">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Natasha Romanoff
-            </td>
-            <td>
-                Black Widow
-            </td>
-            <td>
-                <img src="images/black-widow.jpg" alt="Black Widow" width="200">
+                Description
             </td>
         </tr>
         <tr>
             <td>
-                Tony Stark
+                T'Challa
             </td>
             <td>
-                Iron Man
+               <iframe width="420" height="315"
+                src="https://www.youtube.com/embed/tgbNymZ7vqY">
+                </iframe>
             </td>
             <td>
-                <img src="images/iron-man.jpg" alt="Iron Man" width="200">
+                Description
             </td>
         </tr>
         <tr>
             <td>
-                Steve Rogers
+                T'Challa
             </td>
             <td>
-                Captain America
+               <iframe width="420" height="315"
+                src="https://www.youtube.com/embed/tgbNymZ7vqY">
+                </iframe>
             </td>
             <td>
-                <img src="images/captain-america.jpg" alt="Captain America" width="200">
+                Description
             </td>
         </tr>
     </table>
