--- a/bacs200/05/selfie.html
+++ b/bacs200/05/selfie.html
@@ -16,14 +16,14 @@
     
     <h2>Artwork</h2>
     <p>
-        <a href="images/me-orginal.png">
-            <img src="images/me-orginal.png" width="300" alt="before">
+        <a href="images/me-original.jpg">
+            <img src="images/me-original.jpg" width="300" alt="before">
         </a>
         - Before
     </p>
     <p>
-        <a href="images/me.png">
-            <img src="images/me.png" width="300" alt="after">
+        <a href="images/me-after.png">
+            <img src="images/me-after.png" width="300" alt="after">
         </a>
         - After
     </p>
