--- a/bacs200/02/index.html
+++ b/bacs200/02/index.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <title>J.R.R. Tolkien</title>
+        <link rel="icon"
+      type="image/png"
+      href="../images/logo.png">
     </head>
     <body>
         <h1>J.R.R. Tolkien</h1>
