--- a/bacs200/04/index.html
+++ b/bacs200/04/index.html
@@ -5,6 +5,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Images and Links</title>
+    <link rel="icon"
+      type="image/png"
+      href="../images/logo.png">
 </head>
 
 <body>
