--- a/bacs200/index.html
+++ b/bacs200/index.html
@@ -7,7 +7,7 @@
     <title>Wyatt Jordan Home Page</title>
     <link rel="icon" 
       type="image/png" 
-      href="https://wyattjordanbacs.com/bacs200/images/logo.png">
+      href="images/logo.png">
 </head>
 
 <body>
