--- a/bacs200/03/amuse.html
+++ b/bacs200/03/amuse.html
@@ -4,6 +4,9 @@
 
         <meta charset="UTF-8">
         <title>Page Title</title>
+        <link rel="icon"
+      type="image/png"
+      href="../images/logo.png">
 
     </head>
     
