--- a/bacs200/03/index.html
+++ b/bacs200/03/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>BACS 200 - Week #3</title>
+    <link rel="icon"
+      type="image/png"
+      href="../images/logo.png">
 </head>
 
 <body>
