--- a/bacs200/05/edutain.html
+++ b/bacs200/05/edutain.html
@@ -4,6 +4,9 @@
 
 <head>
     <title>Edutain</title>
+    <link rel="icon"
+      type="image/png"
+      href="../images/logo.png">
 </head>
 
 <body>
@@ -48,41 +51,35 @@
         </tr>
         <tr>
             <td>
-                T'Challa
+               Dave Coplin, Re-Imagining Work
             </td>
             <td>
-               <iframe width="420" height="315"
-                src="https://www.youtube.com/embed/tgbNymZ7vqY">
-                </iframe>
+               <iframe width="560" height="315" src="https://www.youtube.com/embed/G11t6XAIce0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </td>
             <td>
-                Description
+                The author examines the evolving and ever changing nature of work. He examines various work environments and and social issues in the work place and society.
             </td>
         </tr>
         <tr>
             <td>
-                T'Challa
+                Ha-Joon Chang, Economics is for Everyone!
             </td>
             <td>
-               <iframe width="420" height="315"
-                src="https://www.youtube.com/embed/tgbNymZ7vqY">
-                </iframe>
+               <iframe width="560" height="315" src="https://www.youtube.com/embed/NdbbcO35arw?list=PL39BF9545D740ECFF" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </td>
             <td>
-                Description
+                Ha-Joon Chang talks about the basic concepts of economics, and how it relates to everyday life and our understanding of current events.
             </td>
         </tr>
         <tr>
             <td>
-                T'Challa
+                Manuel Lima, The Power of Networks
             </td>
             <td>
-               <iframe width="420" height="315"
-                src="https://www.youtube.com/embed/tgbNymZ7vqY">
-                </iframe>
+               <iframe width="560" height="315" src="https://www.youtube.com/embed/nJmGrNdJ5Gw?list=PL39BF9545D740ECFF" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </td>
             <td>
-                Description
+                Manuel Lima talks about the importance of networks and network visualization. He talks about networks in technology and the natural world.
             </td>
         </tr>
     </table>
