--- a/bacs200/05/index.html
+++ b/bacs200/05/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>BACS 200 - Week #5</title>
-    <link rel="icon" 
+  <link rel="icon"
       type="image/png" 
-      href="">
+      href="../images/logo.png">
 </head>
 
 <body>
