--- a/bacs200/05/selfie.html
+++ b/bacs200/05/selfie.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Profile page</title>
+    <link rel="icon"
+      type="image/png"
+      href="../images/logo.png">
 </head>
 
 <body>
