--- a/bacs200/07/index.html
+++ b/bacs200/07/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>BACS 200 - Week #7</title>
-    <link href="unc.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
