--- a/bacs200/07/wanted.html
+++ b/bacs200/07/wanted.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Wanted</title>
-    <link href="unc.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
