--- a/bacs200/index.html
+++ b/bacs200/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" 
       type="image/png" 
       href="images/logo.png">
+    <link href="general.css" rel="stylesheet">
 </head>
 
 <body>
@@ -52,7 +53,17 @@ Wyatt Jordan is a student at University of Northern Colorado, seeking a marketin
     </p>
     <p>
     <li>
-    Project #5-<a href="05/index.html">edutain me and selfie</a>
+    Project #5-<a href="05/index.html">Edutain me and Selfie</a>
+    </li>
+    </p>
+     <p>
+    <li>
+    Project #6-<a href="06/index.html">Video</a>
+    </li>
+    </p>
+     <p>
+    <li>
+    Project #5-<a href="07/index.html">Wanted Poster</a>
     </li>
     </p>
 
