--- a/bacs200/07/index.html
+++ b/bacs200/07/index.html
@@ -8,14 +8,17 @@
 </head>
 
 <body>
-    <h1>BACS 200 - Week #7 - Feb 24-28</h1>
+    <h1>BACS 200 - Week 5</h1>
 
     <ul>
         <li>
             <a href="..">Home Page</a>
         </li>
         <li>
-            <a href="unc.css">Stylesheet Page</a>
+            <a href="unc.css">Stylesheet</a>
+        </li>
+        <li>
+            <a href="wanted.html">Wanted Poster</a>
         </li>
     </ul>
 
