--- a/bacs200/07/wanted.html
+++ b/bacs200/07/wanted.html
@@ -10,9 +10,18 @@
 
 <body>
     <h1>Wanted</h1>
-
-   
-
+    <h2>Billy the Kid</h2>
+<img src="../images/billy.jpg" alt="billy" width="50%">
+  <h2>Wanted for:</h2>
+    <li>
+        Murder
+    </li>
+    <li>
+        Horse Theft
+    </li>
+    <li>
+        Cattle Rustling
+    </li>
 </body>
 
 </html>
