--- a/bacs200/03/index.html
+++ b/bacs200/03/index.html
@@ -7,6 +7,7 @@
     <link rel="icon"
       type="image/png"
       href="../images/logo.png">
+    <link href="../general.css" rel="stylesheet">
 </head>
 
 <body>
