--- a/bacs200/04/index.html
+++ b/bacs200/04/index.html
@@ -8,6 +8,7 @@
     <link rel="icon"
       type="image/png"
       href="../images/logo.png">
+    <link href="../general.css" rel="stylesheet">
 </head>
 
 <body>
