--- a/bacs200/07/index.html
+++ b/bacs200/07/index.html
@@ -15,7 +15,10 @@
             <a href="..">Home Page</a>
         </li>
         <li>
-            <a href="unc.css">Stylesheet</a>
+            <a href="../general.css">Stylesheet</a>
+        </li>
+        <li>
+            <a href="style.css">Wanted Poster Stylesheet</a>
         </li>
         <li>
             <a href="wanted.html">Wanted Poster</a>
