--- a/bacs200/06/index.html
+++ b/bacs200/06/index.html
@@ -1,1 +1,24 @@
-Video page
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <title>video project</title>
+    <link rel="icon"
+      type="image/png"
+      href="../images/logo.png">
+    <link href="../general.css" rel="stylesheet">
+</head>
+
+<body>
+    
+   <h1>Youtube Video Project</h1>
+ 
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Y8Wtj1Ml6oA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+   <p>
+    The dangers of technology have been a topic of much speculation for as long as humanity has been innovating. It has been explored extensively in literature and cinema, with works such as 1984, and Terminator. One of the more current technology topics being discussed is the digital assistant technology. This manifests in the form of Siri, Google Home, and Amazon Alexa. The virtual assistant listens for trigger phrases such as “Hey Google” and can answer questions, make purchases and phone calls, and play media. The obvious implication is that it is always listening and collecting data. Companies not only use this data to improve their products, but also collect all kinds of information that could be used for advertising or surveillance. Many people see this as a violation of their privacy or rights. It's common knowledge that hackers can access the webcam on your computer, so it is not a stretch that your Amazon Alexa could be hacked, and with that could come credit card and other valuable personal information. Just like social media and other technology, we must take the proper cautions to protect our personal information, and always make informed consumer decisions.    
+       </p> 
+       <li>
+            <a href="../index.html">Home</a>
+    </li>
+    </body>
