--- a/bacs200/07/wanted.html
+++ b/bacs200/07/wanted.html
@@ -6,6 +6,9 @@
     <meta charset="UTF-8">
     <title>Wanted</title>
     <link href="style.css" rel="stylesheet">
+    <link rel="icon"
+      type="image/png"
+      href="../images/logo.png">
 </head>
 
 <body>
