--- a/bacs200/07/index.html
+++ b/bacs200/07/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>BACS 200 - Week #7</title>
+    <link rel="icon"
+      type="image/png"
+      href="../images/logo.png">
     <link href="../general.css" rel="stylesheet">
 </head>
 
