--- a/bacs200/08/index.html
+++ b/bacs200/08/index.html
@@ -7,23 +7,16 @@
     <link rel="icon" 
       type="image/png" 
       href="images/logo.png">
-    <link href="general.css" rel="stylesheet">
+    <link href="../general.css" rel="stylesheet">
 </head>
-
 <body>
-    <header>
-    <nav id="mainmenu">
-        <ul>
-        <li><a href="../index.html"> Home </a></li>
-        </ul>
-        </nav>
-       </header>
-    <p>
-    <img src="images/logo.png" width="300">
-    </p>
-    <nav>
+    <h1> Project #8</h1>
+   <main> 
+   <h2>Portfolio</h2>
+   <nav>
     <ul>
-       <li><a href="https://wyattjordanbacs.com/">Worpress</a></li>
+       <li><a href="../index.html">Home</a></li>
+        <li><a href="https://wyattjordanbacs.com/">Worpress</a></li>
        <li><a href="../02/index.html">Inspiration</a></li>
        <li><a href="../03/index.html">Amusements</a></li> 
        <li><a href="../04/index.html">Images and Links</a></li>
@@ -32,4 +25,11 @@
         <li><a href="../07/index.html">Wanted Poster</a></li>
        </ul>
     </nav>
+    <aside>
+        <img src="https://vignette.wikia.nocookie.net/lotr/images/e/e7/Gandalf_the_Grey.jpg/revision/latest?cb=20121110131754" align="center" width="600">
+    
+        "All we have to decide is what to do with the time that is given to us." -J.R.R. Tolkien
+    </aside>  
+   
+    </main>  
 </body>
