--- a/bacs200/09/index.html
+++ b/bacs200/09/index.html
@@ -13,28 +13,19 @@
 </head>
 
 <body>
+     <h1></h1>
     <header>
     <nav id="mainmenu">
         <ul>
-        <li><a href="../index.html"> Home </a></li>
+        <li><a href="../index.html">Home</a></li>
         </ul>
         </nav>
        </header>
-    <p>
-    <img src="../images/logo.png" width="300">
-    </p>
-    <nav>
-    <ul>
-       <li><a href="https://wyattjordanbacs.com/">Worpress</a></li>
-       <li><a href="../02/index.html">Inspiration</a></li>
-       <li><a href="../03/index.html">Amusements</a></li> 
-       <li><a href="../04/index.html">Images and Links</a></li>
-       <li><a href="../05/index.html">Edutain</a></li>
-       <li><a href="../06/index.html">Youtube Video Project</a></li>
-        <li><a href="../07/index.html">Wanted Poster</a></li>
-       </ul>
-    </nav>
-    <div class="accordion" id="accordionExample">
+   
+   <div class="container">
+    <div class="row">
+        <div class="col-md-1">
+       <div class="accordion" id="accordion">
   <div class="card">
     <div class="card-header" id="headingOne">
       <h2 class="mb-0">
@@ -79,6 +70,38 @@
     </div>
   </div>
 </div>
+
+</div>
+<div class="col-md-2">
+<div id="carousel1" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="https://vignette.wikia.nocookie.net/lotr/images/e/e7/Gandalf_the_Grey.jpg/revision/latest?cb=20121110131754" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="..." class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="..." class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+</div> 
+    </div>
+    </div>
 </body>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
