--- a/bacs200/09/index.html
+++ b/bacs200/09/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-     <h1></h1>
+     <h1>Vermin Supreme for President 2020</h1>
     <header>
     <nav id="mainmenu">
         <ul>
@@ -21,6 +21,10 @@
         </ul>
         </nav>
        </header>
+<div class="alert alert-info">
+  <button type="button" class="close" data-dismiss="alert">&times;</button>
+  <strong>Attention!</strong> Not content with modern politics? Be the change you want to see in the world! <span class="badge badge-secondary">New</span>
+</div>
    
    <div class="container">
     <div class="row">
@@ -30,14 +34,14 @@
     <div class="card-header" id="headingOne">
       <h2 class="mb-0">
         <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-          Collapsible Group Item #1
+         Who is Vermin Supreme?
         </button>
       </h2>
     </div>
 
     <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
       <div class="card-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+        Vermin Supreme is an American political activist, who has ran for various elections, including President of the United States. Vermin has been affliiated with both Democrats and Republicans in the past, but is currently running for President of the United States as a Libertarian.
       </div>
     </div>
   </div>
@@ -45,13 +49,13 @@
     <div class="card-header" id="headingTwo">
       <h2 class="mb-0">
         <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-          Collapsible Group Item #2
+          What does Vermin Supreme believe in?
         </button>
       </h2>
     </div>
     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
       <div class="card-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+        Vermin Supreme will pass legislation that requires all Americans to brush their teeth. In addition, Vermin supports research on time travel and alternative energy. Vermin advocates nationwide preparadness for a zombie apocalypse. Vermin at one point promised free ponies to every American. Vermin's economic policy is pony based, as detailed by the AFPIP program. Crime will be redefined as any act any act that disagrees with, denies, or otherwise opposes Vermin’s enforced freedoms and any act that causes harm to another person or people.
       </div>
     </div>
   </div>
@@ -59,13 +63,13 @@
     <div class="card-header" id="headingThree">
       <h2 class="mb-0">
         <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-          Collapsible Group Item #3
+          Why should you vote for a third party canidate?
         </button>
       </h2>
     </div>
     <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
       <div class="card-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+        Every election poeple complain about the lack of sane choices from the big canidates running for the big parties. Instead of complaining and then voting for red or blue, vote for someone you actual believe in. For too long have we been subjected to the two party system and the institutionalized crime and corruption gets worse every election. Although they get treated as conspiracy theories, some of very frightning issues in today's world are the result of institutionalized power and shady back room deals. Reject the two party system, and do your part to make the world you want to live in.
       </div>
     </div>
   </div>
@@ -81,13 +85,13 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="https://vignette.wikia.nocookie.net/lotr/images/e/e7/Gandalf_the_Grey.jpg/revision/latest?cb=20121110131754" class="d-block w-100" alt="...">
+      <img src="https://pbs.twimg.com/profile_images/1177062065128771584/LFMfb2vC_400x400.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="https://www.gannett-cdn.com/-mm-/beeacba744a738fd2b6824269e2820a3cbc59469/c=273-0-3026-2070/local/-/media/2015/12/09/PAGroup/YorkDailyRecord/635852593653484070-Outtakes-AP-A-ELN-NH-Redm.jpg?width=534&height=401&fit=crop" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="https://www.concordmonitor.com/getattachment/91ff4710-2fe5-4f60-9820-b24f32593c41/verminsupremesettlement-cm-120417-ph01" class="d-block w-100" alt="...">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
