--- a/bacs200/09/index.html
+++ b/bacs200/09/index.html
@@ -39,7 +39,7 @@
       </h2>
     </div>
 
-    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
       <div class="card-body">
         Vermin Supreme is an American political activist, who has ran for various elections, including President of the United States. Vermin has been affliiated with both Democrats and Republicans in the past, but is currently running for President of the United States as a Libertarian.
       </div>
@@ -53,7 +53,7 @@
         </button>
       </h2>
     </div>
-    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
       <div class="card-body">
         Vermin Supreme will pass legislation that requires all Americans to brush their teeth. In addition, Vermin supports research on time travel and alternative energy. Vermin advocates nationwide preparadness for a zombie apocalypse. Vermin at one point promised free ponies to every American. Vermin's economic policy is pony based, as detailed by the AFPIP program. Crime will be redefined as any act any act that disagrees with, denies, or otherwise opposes Vermin’s enforced freedoms and any act that causes harm to another person or people.
       </div>
@@ -67,7 +67,7 @@
         </button>
       </h2>
     </div>
-    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
       <div class="card-body">
         Every election poeple complain about the lack of sane choices from the big canidates running for the big parties. Instead of complaining and then voting for red or blue, vote for someone you actual believe in. For too long have we been subjected to the two party system and the institutionalized crime and corruption gets worse every election. Although they get treated as conspiracy theories, some of very frightning issues in today's world are the result of institutionalized power and shady back room deals. Reject the two party system, and do your part to make the world you want to live in.
       </div>
