--- a/bacs200/index.html
+++ b/bacs200/index.html
@@ -94,6 +94,21 @@
     </li>
     </p>
     <p>
+    <li>
+    Project #8-<a href="08/index.html">Portfolio</a>
+    </li>
+    </p>
+    <p>
+    <li>
+    Project #9-<a href="09/index.html">Non-profit Site</a>
+    </li>
+    </p>
+    <p>
+    <li>
+    Final Project-<a href="project/index.html">Final Project</a>
+    </li>
+    </p>
+    <p>
     <img src="images/logo.png" width="300" class="center">
     </p>
 </body>
