--- a/bacs200/project/index.html
+++ b/bacs200/project/index.html
@@ -19,10 +19,10 @@
     <nav id="finalmenu">
         <ul>
         <li><a href="../index.html"> Home </a></li>
-        <li><a href="page2"> page 1 </a></li>
-        <li><a href="page3"> page 2 </a></li>
-        <li><a href="page4"> page 3 </a></li>
-        <li><a href="page5"> page 4 </a></li>    
+        <li><a href="page2"> Portfolio </a></li>
+        <li><a href="page3"> Music </a></li>
+        <li><a href="page4"> Videos </a></li>
+        <li><a href="page5"> Socials </a></li>    
         </ul>
         </nav>
         </header>
