--- a/bacs200/project/index.html
+++ b/bacs200/project/index.html
@@ -19,10 +19,10 @@
     <nav id="finalmenu">
         <ul>
         <li><a href="../index.html"> Home </a></li>
-        <li><a href="page2"> Portfolio </a></li>
-        <li><a href="page3"> Music </a></li>
-        <li><a href="page4"> Videos </a></li>
-        <li><a href="page5"> Socials </a></li>    
+        <li><a href="page2.html"> Portfolio </a></li>
+        <li><a href="page3.html"> Music </a></li>
+        <li><a href="page4.html"> Videos </a></li>
+        <li><a href="page5.html"> Socials </a></li>    
         </ul>
         </nav>
         </header>
