--- a/bacs200/project/page2.html
+++ b/bacs200/project/page2.html
@@ -27,7 +27,7 @@
         </nav>
         </header>
     <p>
-        Wyatt Jordan released a full length ablum of melodic death metal in June 2019. In addition, He has composed scores and music for movies and videogames, including a feature length film. Wyatt has contributed his guitar playing and technical skills with music production in the studio and live music to several musicians and bands in the Northern Colorado area. Wyatt has worked as a stage hand for large shows, including Post Malone, and Trans Siberian Orchestra. In Addition Wyatt works as a stagehand and guitar technician for Killing Creation, a mordern metal band from Denver. 
+        Wyatt Jordan released a full length ablum of melodic death metal in June 2019. In addition, He has composed scores and music for movies and videogames, including a feature length film. Wyatt has contributed his guitar playing and technical skills with music production in the studio and live music to several musicians and bands in the Northern Colorado area. Wyatt has worked as a stage hand for large shows, including Post Malone, and Trans Siberian Orchestra. In Addition Wyatt works as a stagehand and guitar technician for Killing Creation, a modern metal band from Denver. 
     </p>
 
     
