--- a/bacs200/project/page4.html
+++ b/bacs200/project/page4.html
@@ -27,6 +27,19 @@
         </nav>
         </header>
     <p>
+        VIDEOS
+    </p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/rW8spMNA6cw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <p>
+        A fun little guitar piece
+    </p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/iykz_IIgCCs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <p>
+    Guitar solo with a guitar that was accidentally sent to me
+    </p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/2B9cvc220hw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <p>
+        A short teaser of a symphonic project for the next Starwraith album
     </p>
 
     
