--- a/bacs200/project/page3.html
+++ b/bacs200/project/page3.html
@@ -27,8 +27,14 @@
         </nav>
         </header>
     <p>
+        MUSIC
     </p>
-
+<iframe src="https://open.spotify.com/embed/track/4RCil5d9zhESkU5Q8UdeQr" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    <p>
+        Wyatt released a full length album of melodic death metal in June 2019. Stormborn is a great combination of heavy riffs, catchy choruses, and epic orchestrations.
+        
+        to find it on your favorite platform --> <a href="https://linktr.ee/starwraith"> CLICK HERE</a>
+    </p>
     
    
 </body>
